added "max sub array sum" challenge updated run all tests npm script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "i",
   "scripts": {
     "test": "./node_modules/jest/bin/jest.js",
-    "test:all": "npm test challenges algorithms"
+    "test:all": "npm test ./"
   },
   "author": "Aliaksei Alioshka",
   "license": "ISC",
